build_error_handler.txt

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava UP-TO-DATE
> Task :common:processResources UP-TO-DATE
> Task :common:classes UP-TO-DATE
> Task :common:jar

> Task :fabric:compileJava FAILED
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/event/FabricEventCallbackHandler.java:11: error: cannot find symbol
import net.fabricmc.fabric.api.event.lifecycle.v1.ServerPlayerEvents;
                                                 ^
  symbol:   class ServerPlayerEvents
  location: package net.fabricmc.fabric.api.event.lifecycle.v1
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/event/FabricEventCallbackHandler.java:15: error: cannot find symbol
import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientWorldEvents;
                                                        ^
  symbol:   class ClientWorldEvents
  location: package net.fabricmc.fabric.api.client.event.lifecycle.v1
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':fabric:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
4 actionable tasks: 2 executed, 2 up-to-date
